# cpp-calculator

./: .gitignore  CMakeLists.txt  README.md
include/: calculator.h
src/: main.cpp
